# SDL-example

./: CMakeLists.txt  External_SDL2.cmake  main.c
