cmake_minimum_required(VERSION 3.14)
project(sdl C)

set(CMAKE_C_STANDARD 99)
INCLUDE(FindPkgConfig)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/sdllogo.bmp  DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
add_executable(sdl main.c)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES})
